solve z-index problems with geometry markers

--- a/app/components/resources/map/map-3d/control-buttons.scss
+++ b/app/components/resources/map/map-3d/control-buttons.scss
@@ -13,6 +13,7 @@
   border-left-color: #fff;
   border-radius: 50%;
   cursor: pointer;
+  z-index: 100;
 }
 
 #turn-clockwise-button:hover,
@@ -65,6 +66,7 @@
   -webkit-transition: all 300ms ease;
   user-select: none;
   cursor: default;
+  z-index: 100;
 }
 
 #compass-needle:before,
