--- a/app/components/resources/map/map-3d/geometries/mesh-geometries.scss
+++ b/app/components/resources/map/map-3d/geometries/mesh-geometries.scss
@@ -2,47 +2,53 @@
  * @author Thomas Kleinke
  */
 
-.map-3d-geometry-info {
-  position: fixed;
-  -webkit-transform: translate(-50%, -50%);
-  z-index: 1;
-  pointer-events: none;
-  user-select: none;
+mesh-geometries {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
-  .map-3d-geometry-info-icon {
-    border-radius: 50%;
-    width: 27px;
-    height: 27px;
-    border: 1px solid #000;
-  }
-
-  .map-3d-geometry-info-label {
+  .map-3d-geometry-info {
     position: absolute;
-    left: 31px;
-    top: 0;
-    font-size: 18px;
-    font-weight: bold;
-    color: #fff;
-    -webkit-text-stroke: 1px #000;
+    -webkit-transform: translate(-50%, -50%);
+    z-index: 1;
+    pointer-events: none;
+    user-select: none;
+
+    .map-3d-geometry-info-icon {
+      border-radius: 50%;
+      width: 27px;
+      height: 27px;
+      border: 1px solid #000;
+    }
+
+    .map-3d-geometry-info-label {
+      position: absolute;
+      left: 31px;
+      top: 0;
+      font-size: 18px;
+      font-weight: bold;
+      color: #fff;
+      -webkit-text-stroke: 1px #000;
+    }
   }
-}
 
-#toggle-line-geometries-button,
-#toggle-polygon-geometries-button {
-  position: absolute;
-  bottom: 15px;
-  z-index: 1000;
-  color: #aaa;
+  #toggle-line-geometries-button,
+  #toggle-polygon-geometries-button {
+    position: absolute;
+    bottom: 15px;
+    z-index: 1000;
+    color: #aaa;
 
-  &.activated .mdi {
-    color: #5572a1;
+    &.activated .mdi {
+      color: #5572a1;
+    }
   }
-}
 
-#toggle-line-geometries-button {
-  left: 65px;
-}
+  #toggle-line-geometries-button {
+    left: 65px;
+  }
 
-#toggle-polygon-geometries-button {
-  left: 115px;
+  #toggle-polygon-geometries-button {
+    left: 115px;
+  }
 }
