--- a/app/components/resources/map/map-3d/geometries/point-geometries.scss
+++ b/app/components/resources/map/map-3d/geometries/point-geometries.scss
@@ -2,56 +2,62 @@
  * @author Thomas Kleinke
  */
 
-.map-3d-marker {
-  position: fixed;
-  height: 50px;
-  border-left: 1px solid #fff;
-  z-index: 1;
-  pointer-events: none;
+point-geometries {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 
-  .map-3d-marker-head {
-    position: relative;
-    top: -27px;
-    left: -14px;
-    cursor: -webkit-grabbing;
-    user-select: none;
-    pointer-events: auto;
+  .map-3d-marker {
+    position: absolute;
+    height: 50px;
+    border-left: 1px solid #fff;
+    z-index: 1;
+    pointer-events: none;
 
-    .map-3d-marker-icon {
-      border-radius: 50%;
-      width: 27px;
-      height: 27px;
-      border: 1px solid #000;
+    .map-3d-marker-head {
+      position: relative;
+      top: -27px;
+      left: -14px;
+      cursor: -webkit-grabbing;
+      user-select: none;
+      pointer-events: auto;
+
+      .map-3d-marker-icon {
+        border-radius: 50%;
+        width: 27px;
+        height: 27px;
+        border: 1px solid #000;
+      }
+
+      .map-3d-marker-label {
+        position: absolute;
+        left: 31px;
+        top: 0;
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+        -webkit-text-stroke: 1px #000;
+      }
     }
 
-    .map-3d-marker-label {
-      position: absolute;
-      left: 31px;
-      top: 0;
-      font-size: 18px;
-      font-weight: bold;
-      color: #fff;
-      -webkit-text-stroke: 1px #000;
+    .map-3d-marker-head:hover {
+      cursor: pointer;
+
+      .map-3d-marker-label {
+        color: #5572a1;
+      }
     }
   }
 
-  .map-3d-marker-head:hover {
-    cursor: pointer;
+  #toggle-point-geometries-button {
+    position: absolute;
+    z-index: 1000;
+    left: 15px;
+    bottom: 15px;
+    color: #aaa;
 
-    .map-3d-marker-label {
+    &.activated .mdi {
       color: #5572a1;
     }
-  }
-}
-
-#toggle-point-geometries-button {
-  position: absolute;
-  z-index: 1000;
-  left: 15px;
-  bottom: 15px;
-  color: #aaa;
-
-  &.activated .mdi {
-    color: #5572a1;
   }
 }
